🔧 Add deployment scripts and automation
✨ New features:
- 🚀 Automated deploy script with custom messages
- 📦 NPM scripts for quick deployment
- 📋 Complete deployment guide for Vercel/Netlify
- 🔄 Git workflow automation
- 📊 Production environment variables guide

🎯 Usage:
- ./deploy.sh "your message" - Custom deploy
- npm run deploy:quick - Quick update
- npm run deploy:build - Build + deploy
- npm run git:status - Check status
- npm run git:pull - Get updates

🌐 Ready for Vercel, Netlify, or Railway deployment!

--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint",
     "setup:supabase": "node setup-supabase.js",
     "setup:complete": "npm run db:generate && npm run db:push && npm run db:seed",
+    "deploy": "./deploy.sh",
+    "deploy:quick": "git add . && git commit -m '🔄 Quick update' && git push origin main",
+    "deploy:build": "npm run build && ./deploy.sh '🚀 Production build update'",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "git:status": "git status",
+    "git:pull": "git pull origin main"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
